fixed padding for the spotify player (removes scrollbar)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,7 @@ header{
 
 header > h1 {
 	color: white;
-	font-size: 4em;
+	font-size: 6em;
 	font-family: 'Cinzel';
 	font-weight: bold;
 
@@ -184,27 +184,20 @@ header > h1 {
 /* responsive spotify player, source: http://jsfiddle.net/JMPerez/qa73L/ */
 .embed-container {
     position: relative;
-    padding-bottom: 56.25%;
+    padding-bottom: 400px;
     height: 0;
     overflow: hidden;
     max-width: 100%;
     height: auto;
 }
-    .embed-container iframe,
-    .embed-container object,
-    .embed-container embed {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-    }
-
-/* changes the height of the player and removes the scroll bar */
-@media (min-width:769px) {
-	.embed-container {
-		padding-bottom: 400px;
-	}
+.embed-container iframe,
+.embed-container object,
+.embed-container embed {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
 
 /********VIDEO********/
